# EmptyEpsilon

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cicd.yml  macos.yml  release-legacy.yml  release.yml  rpi-alpine.yml
cmake/: CPackProjectConfig.cmake.in  rpi2b-alpine.toolchain
resources/: BackgroundCrosses.dds  BackgroundGradient.dds  BackgroundGradientOffset.dds  BackgroundGradientSingle.dds  ButtonBackground.active.dds  ButtonBackground.dds  ButtonBackground.disabled.dds  ButtonBackground.disabled.ktx  ButtonBackground.hover.dds  ButtonBackground.ktx  KeyValueBackground.dds  Nebula1.dds  Nebula1.ktx  Nebula2.dds  Nebula2.ktx  Nebula3.dds  Nebula3.ktx  PanelBackground.dds  ProbeBlip.dds  ProbeBlip.ktx  ProgressbarBackground.dds  ProgressbarFill.dds  RadarArrow.dds  RadarArrow.ktx  RadarBlip.dds  RadarBlip.ktx  ResizeDialogCorner.dds  ResizeDialogCorner.ktx  ScrollbarBackground.ktx  ScrollbarSelection.dds  SelectorArrow.dds  SelectorBackground.dds  SliderBackground.dds  SliderBackground.ktx  SliderTick.dds  SliderTick.ktx  StarsBack.dds  StarsBack.ktx  StarsBottom.dds  StarsBottom.ktx  (+196 more)
resources/gui/: BackgroundCrosses.dds  BackgroundCrosses.ktx  BackgroundGradient.dds  BackgroundGradientOffset.dds  BackgroundGradientSingle.dds  ButtonBackground.active.dds  ButtonBackground.active.ktx  ButtonBackground.dds  ButtonBackground.disabled.dds  ButtonBackground.hover.dds  ButtonBackground.hover.ktx  KeyValueBackground.dds  KeyValueBackground.ktx  LabelBackground.dds  PanelBackground.dds  PanelBackground.ktx  ProgressbarBackground.ktx  ProgressbarFill.dds  ProgressbarFill.ktx  ResizeDialogCorner.dds  ScrollbarBackground.dds  ScrollbarSelection.dds  SelectorArrow.dds  SelectorArrow.ktx  SliderBackground.dds  SliderKnob.ktx  SliderTick.dds  TextEntryBackground.dds  TextEntryBackground.focused.dds  TextEntryBackground.ktx  damage_power_overlay.dds
resources/gui/icons/: coolant.dds  docking.dds  docking.ktx  energy.dds  energy.ktx  heading.dds  hull.dds  hull.ktx  lock.dds  missile.dds  missile.ktx  self-destruct.dds  shields-aft.dds  shields-aft.ktx  shields-all.dds  shields-all.ktx  shields-fore.dds  shields-fore.ktx  shields-port.dds  shields-port.ktx  shields-starboard.dds  shields-starboard.ktx  shields.dds  shields.ktx  speed.dds  station-engineering.dds  station-helm.dds  station-relay.dds  station-science.dds  station-science.ktx  station-weapons.dds  status_damaged.dds  status_damaged.ktx  status_jammed.dds  status_jammed.ktx  status_low_power.ktx  status_no_power.dds  status_overheat.dds  system_beam.dds  system_jumpdrive.dds  (+14 more)
resources/planets/: atmosphere.dds  atmosphere.ktx  clouds-1.dds  clouds-1.ktx  clouds-2.dds  clouds-3.dds  clouds-3.ktx  gas-1.dds  gas-1.ktx  gas-2.dds  gas-2.ktx  gas-3.dds  moon-1.dds  moon-1.ktx  moon-2.dds  moon-2.ktx  moon-3.dds  planet-1.dds  planet-1.ktx  planet-2.dds  planet-2.ktx  planet-3.dds  planet-3.ktx  planet-4.dds  planet-4.ktx  planet-5.dds  star-1.dds  star-1.ktx
resources/shaders/: basic.frag  basic.vert  basicColor.frag  basicColor.vert  basicShader.frag  basicShader.vert  billboard.frag  billboard.vert  objectShaderB.frag  objectShaderBI.frag  objectShaderBI.vert  objectShaderBS.frag  objectShaderBS.vert  objectShaderBSI.frag  objectShaderBSI.vert  particles.frag  particles.vert  planetShader.frag  planetShader.vert  spacedust.frag  spacedust.vert  starbox.frag  starbox.vert
src/: frustumCull.h  glObjects.cpp  main.cpp  main.h  mesh.cpp  mesh.h  modelData.cpp  modelData.h  modelInfo.cpp  modelInfo.h  mouseCalibrator.cpp  packResourceProvider.cpp  particleEffect.cpp  particleEffect.h  pathPlanner.cpp  scienceDatabase.cpp  shaderRegistry.cpp  shaderRegistry.h  tutorialGame.cpp  tutorialGame.h
src/ai/: ai.cpp
src/gui/: debugRenderer.cpp  debugRenderer.h  gui2_advancedscrolltext.cpp  gui2_canvas.cpp  gui2_canvas.h  gui2_container.cpp  gui2_container.h  gui2_element.cpp  gui2_element.h  gui2_overlay.cpp  gui2_scrolltext.cpp  gui2_textentry.cpp  gui2_textentry.h  hotkeyBinder.cpp  hotkeyBinder.h  hotkeyConfig.cpp  hotkeyConfig.h  joystickConfig.h  scriptError.cpp
src/hardware/: serialDriver.cpp
src/hardware/devices/: virtualOutputDevice.cpp  virtualOutputDevice.h
src/menus/: hotkeyMenu.cpp  hotkeyMenu.h  optionsMenu.cpp  optionsMenu.h  tutorialMenu.cpp  tutorialMenu.h
src/screenComponents/: alertOverlay.cpp  frequencyCurve.cpp  indicatorOverlays.cpp  radarView.cpp  rawScannerDataRadarOverlay.cpp  rotatingModelView.cpp  scrollingBanner.cpp  signalQualityIndicator.cpp  viewport3d.cpp  viewport3d.h  viewportMainScreen.cpp
src/screens/: cinematicViewScreen.cpp  cinematicViewScreen.h  crewStationScreen.cpp  crewStationScreen.h  mainScreen.cpp  mainScreen.h  spectatorScreen.cpp  spectatorScreen.h  topDownScreen.cpp  topDownScreen.h  windowScreen.cpp  windowScreen.h
src/screens/gm/: chatDialog.cpp  gameMasterScreen.cpp  gameMasterScreen.h
src/spaceObjects/: artifact.cpp  artifact.h  asteroid.cpp  asteroid.h  beamEffect.cpp  beamEffect.h  blackHole.cpp  blackHole.h  electricExplosionEffect.cpp  electricExplosionEffect.h  explosionEffect.cpp  explosionEffect.h  mine.cpp  mine.h  nebula.cpp  nebula.h  planet.cpp  planet.h  playerSpaceship.cpp  scanProbe.cpp  shipTemplateBasedObject.cpp  shipTemplateBasedObject.h  spaceObject.cpp  spaceObject.h  spaceship.cpp  spaceship.h  warpJammer.cpp  wormHole.cpp  wormHole.h  zone.cpp
texconverter/: CMakeLists.txt  repackMeshes.cpp  repackTextures.cpp
